[tool.poetry]
name = "emu8"
version = "0.1.0"
description = ""
authors = ["Daniel Gysi <danielgysi@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
keyboard = "^0.13.5"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
